# basic-opengl

./: .gitignore  CMakeLists.txt  main.cpp  run.sh
app/: shader.h
include/: glad.c  glad.h
shaders/: vertex_shader.vert
